# setup-vg

./: pyproject.toml
src/setup_vg/datetime/: data_hora.py
src/setup_vg/user/: acoes.py  consts.py  input.py
