[project]
name = "setup-vg"
version = "0.1.0"
description = ""
authors = [
    {name = "João Costa",email = "jvcosta1502@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "holidays (>=0.91,<0.92)",
    "questionary (>=2.1.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "setup_vg", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
